Finished Side Bar, Some changes in css code structure
Changed inappropriate IDs to classes, improved code style and hierarchy, changed theme color to full reddish.

--- a/index.html
+++ b/index.html
@@ -36,30 +36,30 @@
         </div>
 
         <div class="projects">
-          <h2>Projects</h2>
-          <ol>
-            <li>
-              <a href="https://barbershop-pl.goit.global/" style="color: grey"
+          <h2 class="h-main">Projects</h2>
+          <ol class="ol-main">
+            <li><span class="ol-main-item">
+              <a href="https://barbershop-pl.goit.global/" style="color:gray"
                 >https://barbershop-pl.goit.global/</a
               >........<b>[</b> HTML5, CSS3 <b>]</b>
-            </li>
-            <li>
-              <a href="https://cryptohub.goit.global/" style="color: grey"
+            </span> </li>
+            <li><span class="ol-main-item">
+              <a href="https://cryptohub.goit.global/" style="color:gray"
                 >https://cryptohub.goit.global/</a
               >.................<b>[</b> JavaScript <b>]</b>
-            </li>
-            <li>
-              <a href="https://kidslike.goit.global/" style="color: grey"
+            </span></li>
+            <li><span class="ol-main-item">
+              <a href="https://kidslike.goit.global/" style="color:gray"
                 >https://kidslike.goit.global/</a
               >........................<b>[</b> React.js, Node.js <b>]</b>
-            </li>
+           </span> </li>
           </ol>
         </div>
 
         <div class="expirence">
-          <h2>Doświadczenie zawodowe</h2>
-          <h3>Operator maszyn <span id="exp-loc">Silgan</span></h3>
-          <p id="exp-time">Listopad 2020 - Styczeń 2022 | Poland</p>
+          <h2 class="h-main">Doświadczenie zawodowe</h2>
+          <h3>Operator maszyn <span class="exp-loc">Silgan</span></h3>
+          <p class="exp-time">Listopad 2020 - Styczeń 2022 | Poland</p>
           <ul>
             <li>Obsługa maszyn produkcyjnych do produkcji opakowań blaszanych</li>
             <li>Przezbrojenia linii zależnie od wyrabianego produktu</li>
@@ -69,8 +69,8 @@
         </div>
 
         <div class="expirence">
-          <h3>Automatyk przemysłowy <span id="exp-loc">Silgan</span></h3>
-          <p id="exp-time">Styczeń 2022 - up to now | Poland</p>
+          <h3>Automatyk przemysłowy <span class="exp-loc">Silgan</span></h3>
+          <p class="exp-time">Styczeń 2022 - up to now | Poland</p>
           <ul>
             <li>
               Nadzór elektryczny nad parkiem amszyn oraz siecią elektryczną zakłądu i
@@ -93,8 +93,8 @@
         </div>
 
         <div class="expirence">
-          <h3>?? <span id="exp-loc">??</span></h3>
-          <p id="exp-time">Lipiec 2022 - ?? | Netherlands</p>
+          <h3>?? <span class="exp-loc">??</span></h3>
+          <p class="exp-time">Lipiec 2022 - ?? | Netherlands</p>
           <ul>
             <li>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -113,8 +113,8 @@
         </div>
 
         <div class="education">
-          <h2>Edukacja</h2>
-          <h3>Technikum</h3>
+          <h2 class="h-main">Edukacja</h2>
+          <h3 style="color:#e82b2b">Technikum</h3>
           <h4>Mechatronika</h4>
           <p>Wrzesień 2016 - Maj 2020 | Poland</p>
         </div>
@@ -125,42 +125,38 @@
           <img src="photo.gif" alt="zdjęcie profilowe - rysunek" id="p-photo" />
           <div class="contact">
             <h2>Kontakt</h2>
-            <p>
-              C:
-              <a href="tel:+ 77 777 777 777" style="color: grey"
-                >+ 77 777 777 777
-              </a>
-              <br />
-              E:
-              <a href="mailto:mateusz.martinn@gmail.com" style="color: grey"
-                >mateusz.martinn@gmail.com</a
-              >
-            </p>
+            <span class="contact-type">C:&nbsp&nbsp</s>
+            <a href="tel:+ 77 777 777 777" class="contact-line">+77 777 777 777 </a>
+            <br />
+            <span class="contact-type">E:&nbsp&nbsp</stan>
+            <a href="mailto:mateusz.martinn@gmail.com" class="contact-line"
+              >mateusz.martinn@gmail.com</a
+            >
           </div>
 
           <div class="tech">
             <h2>Tech skills</h2>
-            <ul>
-              <li>Automatyka przemysłowa</li>
-              <li>Elektryka i elektronika</li>
-              <li>Uprawnienia SEP</li>
-              <li><a href="IT_basics.png" style="color: white">Podstawy IT</a></li>
-              <li>LAD i FBD</li>
-              <li>
+            <ul class="ul-side-tech">
+              <li><span class="li-side">Automatyka przemysłowa</span></li>
+              <li><span class="li-side">Elektryka i elektronika</span></li>
+              <li><span class="li-side">Uprawnienia SEP</span></li>
+              <li><a href="IT_basics.png" style="color: white">Podstawy IT</span></a></li>
+              <li><span class="li-side">LAD i FBD</span></li>
+              <li><span class="li-side">
                 Obsługa, konserwacja, montaż i projektowanie<br />
-                urządzeń mechatronciznych
+                urządzeń mechatronciznych</span>
               </li>
             </ul>
           </div>
           <div class="soft">
             <h2>Soft skills</h2>
-            <ul>
-              <li>Praca w zespole</li>
-              <li>Zarządzanie zasobami</li>
-              <li>Zarządzanie małym zespołem</li>
-              <li>Samoorganizacja</li>
-              <li>Prioretyzacja zadań</li>
-              <li>Feedback</li>
+            <ul class="ul-side-soft">
+              <li><span class="li-side">Praca w zespole</span></li>
+              <li><span class="li-side">Zarządzanie zasobam</span></li>
+              <li><span class="li-side">Zarządzanie małym zespołem</span></li>
+              <li><span class="li-side">Samoorganizacja</span></li>
+              <li><span class="li-side">Prioretyzacja zadań</span></li>
+              <li><span class="li-side">Feedback</span></li>
             </ul>
           </div>
         </aside>
