Almost finished styling of Main page
Mainly paddings corrections

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="wrapper">
       <main>
         <div class="main-desc">
-          <h2>Automatyk przemysłowy</h2>
+          <h3 id="title">Automatyk przemysłowy</h3>
           <h1>Mateusz Martin</h1>
           <p>
             Pasjonat IT od 16 lat, programowania od 12, automatyki od 5 i Azji od 10.
@@ -39,28 +39,30 @@
           <h2 class="h-main">Projects</h2>
           <ol class="ol-main">
             <li><span class="ol-main-item">
-              <a href="https://barbershop-pl.goit.global/" style="color:gray"
+              <a class="projects-link"  href="https://barbershop-pl.goit.global/" 
                 >https://barbershop-pl.goit.global/</a
-              >........<b>[</b> HTML5, CSS3 <b>]</b>
+              >............................<span class="projects-bracket">[</span> HTML5, CSS3 <span class="projects-bracket">]</span>
             </span> </li>
             <li><span class="ol-main-item">
-              <a href="https://cryptohub.goit.global/" style="color:gray"
+              <a class="projects-link"  href="https://cryptohub.goit.global/" 
                 >https://cryptohub.goit.global/</a
-              >.................<b>[</b> JavaScript <b>]</b>
+              >.....................................<span class="projects-bracket">[</span> JavaScript <span class="projects-bracket">]</span>
             </span></li>
             <li><span class="ol-main-item">
-              <a href="https://kidslike.goit.global/" style="color:gray"
+              <a class="projects-link" href="https://kidslike.goit.global/" 
                 >https://kidslike.goit.global/</a
-              >........................<b>[</b> React.js, Node.js <b>]</b>
+              >............................................<span class="projects-bracket">[</span> React.js, Node.js <span class="projects-bracket">]</span>
            </span> </li>
           </ol>
         </div>
 
-        <div class="expirence">
+      <div class="expirience">
+
+        <div class="expirence-item">
           <h2 class="h-main">Doświadczenie zawodowe</h2>
           <h3>Operator maszyn <span class="exp-loc">Silgan</span></h3>
           <p class="exp-time">Listopad 2020 - Styczeń 2022 | Poland</p>
-          <ul>
+          <ul class="ul-main">
             <li>Obsługa maszyn produkcyjnych do produkcji opakowań blaszanych</li>
             <li>Przezbrojenia linii zależnie od wyrabianego produktu</li>
             <li>Naprawa bieżących awarii i usterek mechanicznych</li>
@@ -68,10 +70,10 @@
           </ul>
         </div>
 
-        <div class="expirence">
+        <div class="expirence-item">
           <h3>Automatyk przemysłowy <span class="exp-loc">Silgan</span></h3>
           <p class="exp-time">Styczeń 2022 - up to now | Poland</p>
-          <ul>
+          <ul class="ul-main">
             <li>
               Nadzór elektryczny nad parkiem amszyn oraz siecią elektryczną zakłądu i
               rozdzielniom niskiego napięcia
@@ -92,10 +94,10 @@
           </ul>
         </div>
 
-        <div class="expirence">
+        <div class="expirence-item">
           <h3>?? <span class="exp-loc">??</span></h3>
           <p class="exp-time">Lipiec 2022 - ?? | Netherlands</p>
-          <ul>
+          <ul class="ul-main">
             <li>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
             </li>
@@ -112,9 +114,11 @@
           </ul>
         </div>
 
+      </div>
+
         <div class="education">
           <h2 class="h-main">Edukacja</h2>
-          <h3 style="color:#e82b2b">Technikum</h3>
+          <h3 class="education-type">Technikum</h3>
           <h4>Mechatronika</h4>
           <p>Wrzesień 2016 - Maj 2020 | Poland</p>
         </div>
