Changed 2nd job name

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         </div>
 
         <div class="expirence-item">
-          <h3>Automatyk przemysłowy <span class="exp-loc">Silgan</span></h3>
-          <p class="exp-time">Styczeń 2022 - up to now | Poland</p>
+          <h3>Automation Service Enginer <span class="exp-loc">Silgan</span></h3>
+          <p class="exp-time">Styczeń 2022 - Lipiec 2022 | Poland</p>
           <ul class="ul-main">
             <li>
               Nadzór elektryczny nad parkiem amszyn oraz siecią elektryczną zakłądu i
